argocd/test.yaml
kind: Service
apiVersion: v1
metadata:
  name: web
  namespace: default
  uid: 8adacd5f-f7c6-4c9a-a562-750347ea7022
  resourceVersion: '23766'
  creationTimestamp: '2021-01-29T01:16:53Z'
  labels:
    app: web
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32153
  selector:
    app: web
  clusterIP: 10.96.113.124
  clusterIPs:
    - 10.96.113.124
  type: NodePort
  sessionAffinity: None
  externalTrafficPolicy: Cluster
status:
  loadBalancer: {}
